- Fixed Software Suggestions API's to ignore Viptela SD-WAN releases - Updated Swagger Doc
